# homeserver_rust

./: .dockerignore  .gitignore  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CODEBASE.md  CODE_REVIEW.md  Cargo.toml  Dockerfile  MIGRATION_COMPLETE.md  README.md  cliff.toml  config.toml  crates.js  docker-compose.yml  docker-entrypoint.sh  help.html  index.html  renovate.json  settings.html  src-files.js
.agents/rules/: rust.md
.claude/: settings.json
.cursor/rules/: project.mdc
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml  tag-version.yml
deployment/: .env.example  .gitignore  README.md  config.toml  docker-compose.production.yml  docker-compose.yml
examples/: dump_history.rs
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
homeserver/: all.html  index.html  sidebar-items.js
homeserver/aggregation_worker/: fn.run_one_tick.html  fn.spawn.html  index.html  sidebar-items.js  struct.AggregationWorkerConfig.html
homeserver/alerting/: enum.AlertState.html  fn.compare.html  fn.extract_metric.html  index.html  sidebar-items.js  struct.AlertEngine.html  struct.AlertEvent.html  struct.Notifier.html
homeserver/backfill/: fn.run_backfill.html  index.html  sidebar-items.js
homeserver/config/: index.html  sidebar-items.js  struct.AlertRule.html  struct.AlertsConfig.html  struct.AppConfig.html  struct.DatabaseConfig.html  struct.MonitoringConfig.html  struct.PublishingConfig.html  struct.ServerConfig.html
homeserver/docker_repo/: fn.process_statistics.html  index.html  sidebar-items.js  struct.DockerRepo.html
homeserver/gpu_repo/: fn.parse_busy_percent.html  fn.parse_power_microwatts.html  fn.parse_pwm_percent.html  fn.parse_u64.html  fn.parse_vendor_id.html  index.html  sidebar-items.js  struct.GpuRepo.html
homeserver/history_repo/: constant.CURRENT_SCHEMA_VERSION.html  index.html  sidebar-items.js  struct.HistoryRepo.html
homeserver/models/: enum.ContainerState.html  fn.merge_system_info.html  index.html  sidebar-items.js  struct.AggregatedSnapshot.html  struct.ContainerStats.html  struct.CpuStats.html  struct.DiskDeviceStat.html  struct.FullSystemSnapshot.html  struct.FullSystemSnapshotDisplay.html  struct.GpuStats.html  (+9 more)
search.index/: 003001fa6b.js  0049b8cde2.js  014b6fb204.js  019d6bae34.js  01b5756739.js  01fe06fce7.js  0256e0b803.js  04443b249d.js  04933169c3.js  050e4e77b1.js  05449bee09.js  05a4d59c58.js  064f3cd192.js  06c5eee658.js  071eff96ba.js  07725a7120.js  082126e49d.js  083a377228.js  086c9752bc.js  089bd3c396.js  08e51052a3.js  093e3fcf99.js  093f6e4e21.js  0bd4c98a3c.js  0cb5404006.js  0d1205ccff.js  0dd129f432.js  0e6e81f472.js  0e7f31d491.js  0e8dc79dec.js  0ede705a62.js  0fa4933da5.js  0fc81b12db.js  10dfe60d8f.js  1116834dc4.js  11c2176bac.js  11c54a5c74.js  13ac8f565c.js  13ec0768ab.js  1439e0d9dd.js  (+220 more)
src/: aggregation_worker.rs  backfill.rs  config.rs  docker_repo.rs  history_repo.rs  lib.rs  main.rs  models.rs  routes.rs  sysinfo_repo.rs  version.rs  worker.rs
tests/: aggregation_tests.rs  alerting_tests.rs  config_tests.rs  docker_repo_tests.rs  docker_stats_tests.rs  gpu_repo_tests.rs  history_blob_roundtrip_tests.rs  history_repo_aggregation_tests.rs  history_repo_migration_tests.rs  history_repo_tests.rs  history_writer_tests.rs  integration_tests.rs  linux_parser_tests.rs  models_serde_tests.rs  models_tests.rs  models_wincode_tests.rs  smart_repo_tests.rs  worker_tests.rs
(+199 files in other folders)
