[package]
name = "homeserver"
version = "0.5.0"
edition = "2024"
rust-version = "1.93"
description = "Home server - system and Docker stats over WebSockets (Rust port)"

[lib]
name = "homeserver"
path = "src/lib.rs"

[[bin]]
name = "homeserver"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + WebSockets
axum = { version = "0.8", features = ["json", "ws"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wincode = { version = "0.3", features = ["derive"] }

# Config
toml = "0.9"

# System info (OSHI equivalent)
sysinfo = "0.38"

# Docker API
bollard = "0.20"

# SQLite (async + pooling)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"

# Utilities
bytes = "1"
thiserror = "2.0"
anyhow = "1.0"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"
axum-test = { version = "18", features = ["ws"] }
