[package]
name = "homeserver"
version = "0.9.0"
edition = "2024"
rust-version = "1.95"
description = "Home server - system and Docker stats over WebSockets (Rust port)"

[lib]
name = "homeserver"
path = "src/lib.rs"

[[bin]]
name = "homeserver"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + WebSockets (WS transport is yawc, below — axum's native ws feature is not used)
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.7", features = ["cors"] }
# WebSocket transport with permessage-deflate (RFC 7692). default-features off to avoid
# pulling yawc's default rustls-ring TLS stack (only the client path needs it); axum
# integration is via axum-core 0.5 + http 1, compatible with axum 0.8.
yawc = { version = "0.3", default-features = false, features = ["axum"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wincode = { version = "0.5", features = ["derive"] }

# Config
toml = "1"

# System info (OSHI equivalent)
sysinfo = "0.39"

# Docker API
bollard = "0.21"

# SQLite (async + pooling)
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"

# Cron (local-time schedule for VACUUM)
cron = "0.17"

# Utilities
bytes = "1"
thiserror = "2.0"
anyhow = "1.0"
futures-util = "0.3"

# Alert webhook HTTP client (rustls TLS; isolated to the alerting module)
reqwest = { version = "0.13", default-features = false, features = ["rustls", "webpki-roots", "json"] }

# Memory allocator
tikv-jemallocator = "0.7"

# Optional: NVIDIA GPU metrics via NVML (loaded at runtime; off by default).
nvml-wrapper = { version = "0.10", optional = true }

[features]
# Enable NVIDIA GPU metrics (links the nvml-wrapper crate; libnvidia-ml is dlopen'd at runtime).
gpu-nvidia = ["dep:nvml-wrapper"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"
axum-test = { version = "21", features = ["ws"] }
